# hyphex

./: .gitignore  README.md  pyproject.toml
src/hyphex/: __init__.py  _frontmatter.py  exceptions.py  grammar.lark  hooks.py  models.py  parser.py  schema.py  store.py  version.py
src/hyphex/agents/: __init__.py  backends.py  middleware.py  note_taker.py  preprocess.py  tools.py
src/hyphex/prompts/: note_taker.j2  schema_summary.md.j2
tests/: test_hooks.py  test_middleware.py  test_parser.py  test_preprocess.py  test_schema.py  test_store.py  test_tools.py
